--- a/car_price_part_1.ipynb
+++ b/car_price_part_1.ipynb
@@ -34,8 +34,8 @@
     "**The goal of the current notebook** is to prepare train and validation datasets, which later will be used for model building and evaluating its success respectively.\n",
     "\n",
     "## Links\n",
-    "* [GitHub repository of the project](https://github.com/ZaikaBohdan/ds_car_price_proj)\n",
-    "* [Web App](https://share.streamlit.io/zaikabohdan/ds_car_price_proj/main/app/app.py)\n",
+    "* [GitHub repository of the project](https://github.com/tushar92644/price-predictor-of-cars-)\n",
+    "* [Web App](https://share.streamlit.io/tushar92644/price-predictor-of-cars-/main/app/app.py)\n",
     "\n",
     "# Importing necessary libraries"
    ]
@@ -5543,7 +5543,7 @@
    "id": "5f6c8848",
    "metadata": {},
    "source": [
-    "That's the end of part 1 of the 'Building a car price prediction model for the CarDekho website' project. [In the next part](https://nbviewer.org/github/ZaikaBohdan/ds_car_price_proj/blob/main/car_price_part_2.ipynb), we will explore the train dataset and build the model based on it."
+    "That's the end of part 1 of the 'Building a car price prediction model for the CarDekho website' project. [In the next part], we will explore the train dataset and build the model based on it."
    ]
   }
  ],
