--- a/car_price_part_1.ipynb
+++ b/car_price_part_1.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "The data collection and model building are described in 2 notebooks:\n",
     "* Part 1: Data collection and splitting into train and validation datasets (current)\n",
-    "* [Part 2: Data preparation and model building]\n",
+    "* Part 2: Data preparation and model building\n",
     "\n",
     "**The goal of the current notebook** is to prepare train and validation datasets, which later will be used for model building and evaluating its success respectively.\n",
     "\n",
