--- a/car_price_part_2.ipynb
+++ b/car_price_part_2.ipynb
@@ -28,7 +28,7 @@
     "In this project, we'll collect data about used cars from the CarDekho website, build a price prediction model and deploy it in a web app. The app may later be used by CarDekho users for evaluating the price of put up for sale vehicles or exploring collected data on their own.\n",
     "\n",
     "The data collection and model building are described in 2 notebooks:\n",
-    "* [Part 1: Data collection and splitting into train and validation datasets](https://nbviewer.org/github/ZaikaBohdan/ds_car_price_proj/blob/main/car_price_part_1.ipynb)\n",
+    "* Part 1: Data collection and splitting into train and validation datasets\n",
     "* Part 2: Data preparation and model building (current)\n",
     "\n",
     "**The goal of the current notebook** is to build a car price prediction model based on the train dataset and evaluate its success on the validation dataset. We will achieve it by following the next steps:\n",
@@ -38,8 +38,8 @@
     "4. Choose the best one and test it on the validation dataset.\n",
     "\n",
     "## Links\n",
-    "* [GitHub repository of the project](https://github.com/ZaikaBohdan/ds_car_price_proj)\n",
-    "* [Web App](https://share.streamlit.io/zaikabohdan/ds_car_price_proj/main/app/app.py)"
+    "* [GitHub repository of the project](https://github.com/tushar92644/price-predictor-of-cars-)\n",
+    "* [Web App](https://share.streamlit.io/tushar92644/price-predictor-of-cars-/main/app/app.py)"
    ]
   },
   {
@@ -2706,7 +2706,7 @@
    "id": "fc9c87f8",
    "metadata": {},
    "source": [
-    "That's the end of part 2 of the *'Building a car price prediction model for the CarDekho website'* project. You can check the web app with created model [here](https://share.streamlit.io/zaikabohdan/ds_car_price_proj/main/app/app.py)."
+    "That's the end of part 2 of the *'Building a car price prediction model for the CarDekho website'* project. You can check the web app with created model [here](https://share.streamlit.io/tushar92644/price-predictor-of-cars-/main/app/app.py)."
    ]
   }
  ],
